--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="container mt-5">
-  <div class="col-12">
-    <app-todolists></app-todolists>
+  
+    
+      <!-- <app-todolists></app-todolists> -->
+     <app-todo-task></app-todo-task>
+     <app-student-task></app-student-task>
+    </div>
 
-  </div>
-</div>
+
+
