--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@
    Base Body (Light Mode)
 =================================== */
 body {
-  background-color: #f5f6fa; /* soft neutral gray-blue background */
+  background-color: #fafbff; /* soft neutral gray-blue background */
   color: #212529; /* dark text for readability */
   font-family: "Poppins", sans-serif;
   transition: background-color 0.4s ease, color 0.4s ease;
