--- a/src/app/shared/components/student-task/student-task.component.html
+++ b/src/app/shared/components/student-task/student-task.component.html
@@ -1,23 +1,42 @@
 
 <div class="row mt-5">
 <div class="col-md-4">
+  
 <div class="form-group">
-<input type="text" class="form-control" #fname placeholder="Enter Name">
+<input type="text" class="form-control" #fname placeholder="Enter Name" (input)="0">
 </div>
 <div class="form-group">
-<input type="text" class="form-control" #lname placeholder="Enter Lname">
-</div>
-
-<div class="form-group">
-<input type="text" class="form-control" #email placeholder="Enter Email">
+<input type="text" class="form-control" #lname placeholder="Enter Lname"  (input)="0">
 </div>
 
 <div class="form-group">
-<input type="text" class="form-control" #contact placeholder="Enter Contact">
+<input type="text" class="form-control" #email placeholder="Enter Email" (input)="0">
 </div>
-<button (click)="addStd()" mat-raised-button color="primary" *ngIf="!isEdit">Add Student</button>
+
+<div class="form-group">
+<input type="text" class="form-control" #contact placeholder="Enter Contact" (input)="0">
+</div>
+
+<!-- <button
+ (click)="addStd()" mat-raised-button color="primary" *ngIf="!isEdit">Add Student</button> -->
+
+
+<button
+  mat-raised-button
+  color="primary"
+  (click)="addStd()"
+  *ngIf="!isEdit"
+  [disabled]="!fname.value || !lname.value || !email.value || !contact.value"
+>
+  Add Student </button>
+
 <button (click)="onUpdate()" mat-raised-button color="primary" *ngIf="isEdit">Update Student</button>
+
+ <button (click)="onCancel()"  *ngIf="isEdit" mat-button color="accent"   class=" btnText">Cancel</button>
+
+
 </div>
+
 
 
   <div class="col-md-8">
