--- a/src/app/shared/components/todo-task/todo-task.component.html
+++ b/src/app/shared/components/todo-task/todo-task.component.html
@@ -4,9 +4,15 @@
  <div class="card">
 <div class="card-body">
 <div class="form-group">
- <input  type="text" class="form-control p-4 mt-5" #todo placeholder="Enter any Value">
- <button (click)="addTodo(todo)"   *ngIf="!isEdit" mat-raised-button color="primary" class="mt-3">Add Todo</button>
+ <input  type="text" class="form-control p-4 mt-5" #todo placeholder="Enter any Value" (input)="0">
+ <!-- <button (click)="addTodo(todo)"   *ngIf="!isEdit" mat-raised-button color="primary" class="mt-3">Add Todo</button>
+   -->
+ <button [disabled]="!todo.value" (click)="addTodo(todo)"   *ngIf="!isEdit" mat-raised-button color="primary" class="mt-3">Add Todo</button>
+
  <button (click)="onUpdate(todo)"  *ngIf="isEdit" mat-raised-button color="primary" class="mt-3">Update</button>
+ <button (click)="onCancel()"  *ngIf="isEdit" mat-button color="accent"   class=" btnText">Cancel</button>
+
+
  </div>
 </div>  
  </div>
@@ -15,10 +21,10 @@
  <div class="card">
 <div class="card-body">
  <ul class="list-group">
-     <li class="list-group-item" *ngFor="let t of todoArr" class=" mb-5 list-group-item d-flex justify-content-between align-items-center">
+     <li class="list-group-item" *ngFor="let t of todoArr" class=" mt-2 list-group-item d-flex justify-content-between align-items-center">
        {{t.todoItem}}
          <div class="btn">
-             <button (click)="onEdit(t)" mat-raised-button color="primary">Edite</button>
+             <button (click)="onEdit(t)" mat-raised-button color="primary">Edit</button>
              <button (click)="onDelete(t.todoId)" mat-raised-button color="warn">Delete</button>
             </div>
 
