--- a/src/app/shared/components/comp-a/comp-a.component.html
+++ b/src/app/shared/components/comp-a/comp-a.component.html
@@ -1,7 +1,7 @@
 
 
 
-<app-comp-b [childMessage]="message"  [data01]="meeting"
+<app-comp-b [childMessage]="messageA"  [data01]="meeting"
 [data02]="student" [data03]="employee" [data04]="booking" [data05]="course"
 [data06]="order" [data07]="playlist" [data08]="enrollment" [data09]="patientRecord" [data10]="transaction"
 [data11]="product" [data12]="movie" [data13]="shipment" [data14]="admission"
