--- a/src/app/shared/components/comp-b/comp-b.component.scss
+++ b/src/app/shared/components/comp-b/comp-b.component.scss
@@ -78,6 +78,12 @@
   }
 }
 
+
+.info-card{
+    font-style:italic;
+    font-weight: 600;
+}
+
 /* ✨ Optional smooth entry animation */
 @keyframes fadeUp {
   from {
