--- a/src/app/shared/components/comp-b/comp-b.component.scss
+++ b/src/app/shared/components/comp-b/comp-b.component.scss
@@ -55,7 +55,7 @@
 .col-md-4 {
   flex: 1 1 320px; /* adjusts automatically for smaller screens */
   max-width: 400px;
-  margin:0 0 25px;
+  margin:0 0 25px 0;
 }
 
 /* 💼 Info Card Design */
@@ -88,6 +88,7 @@
     width: auto;
     height: 100%;
     margin: 15px;
+    padding:20px 20px 30px 20px;
 
 }
 
