--- a/src/app/shared/components/comp-b/comp-b.component.html
+++ b/src/app/shared/components/comp-b/comp-b.component.html
@@ -229,5 +229,8 @@ expected to arrive by {{data25.delivery.expected}}.
 
 
 <!-- 👇 Pass the message to the child component -->
-<app-comp-c [grandChild]="messageB"></app-comp-c>
+<app-comp-c [strMessage]="strMessage" [person1]="person" [person2]="studentName" [gadget]="gadget"
+ [movie]="movie" [traveler]="travelerData" [player]="player" [bookData]="bookData" [shopData]="shopData"
+ [trainerData]="trainerData" [restaurantData]="restaurantData" [concertData]="concertData"
+ [carData]="carData"></app-comp-c>
 
